--- a/css/studies.css
+++ b/css/studies.css
@@ -1,3 +1,8 @@
+.studies-container {
+  margin: 0 auto;
+  width: 1000px;
+  padding-bottom: 120px;
+}
 .studies-boxs {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -6,19 +11,17 @@
 .studies-box {
   display: block;
   background: var(--cor-8);
-  padding: 0 35px 40px 35px;
+  padding: 0px 35px 40px 35px;
   border-radius: 15px;
   margin-bottom: 70px;
-  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.6);
 }
-.studies-container h2 {
-  margin-bottom: 120px;
-}
-.studies-container h2::before {
+
+.my-studies h2::before {
   content: "";
   display: inline-block;
-  background: url("../img/detalhe.svg") no-repeat;
-  width: 24px;
+  background: url("../img/icon/detalhe.svg") no-repeat;
+  width: 26px;
   height: 41px;
   margin-right: 10px;
 }
@@ -26,13 +29,9 @@
   display: flex;
   justify-content: space-between;
 }
-.studies-boxs li {
-  width: 100px;
-  height: 100px;
+.studies-boxs img {
+  max-width: 90px;
+  height: 90px;
   position: relative;
   top: -50px;
-}
-.studies-boxs img {
-  width: 100%;
-  max-height: 100%;
 }
