--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -4,6 +4,9 @@
 .font-int-r-1 {
   font: 300 1.125rem/1.3 "Inter", sans-serif;
 }
+.font-int-r-2 {
+  font: 500 1.5rem/1.3 "Inter", sans-serif;
+}
 .font-pop-g-4 {
   font: 600 4.37rem/1.5 "Poppins", sans-serif;
 }
@@ -14,12 +17,3 @@
   font: 300 1.5rem/1.3 "Oswald", sans-serif;
 }
 
-.Subtitulo {
-  font: 700 3.12rem/1.5 "Inter", sans-serif;
-  color: var(--cor-destaque-1);
-  text-transform: uppercase;
-}
-.span {
-  font-weight: 500;
-  color: var(--cor-destaque-1);
-}
