--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -30,3 +30,15 @@
 .col-2 {
   grid-column: span 2;
 }
+@media (max-width: 1100px) {
+  .btn {
+    font-size: 1.25rem;
+    padding: 10px 14px;
+  }
+}
+@media (max-width: 800px) {
+  .btn {
+    font-size: 1rem;
+    padding: 8px 10px;
+  }
+}
