--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -17,3 +17,41 @@
   font: 300 1.5rem/1.3 "Oswald", sans-serif;
 }
 
+@media (max-width: 1100px) {
+  .font-int-g-1 {
+    font-size: 1rem;
+  }
+  .font-int-r-1 {
+    font-size: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .font-int-r-2 {
+    font: 500 1.5rem/1.3 "Inter", sans-serif;
+  }
+  .font-pop-g-4 {
+    font-size: 3.37rem;
+  }
+  .font-pop-g-1 {
+    font: 700 1rem/1 "Poppins", sans-serif;
+  }
+  .font-os-r-1 {
+    font: 300 1.25rem/1.3 "Oswald", sans-serif;
+  }
+}
+@media (max-width: 950px) {
+  .font-int-g-1 {
+    font-size: 0.85rem;
+  }
+  .font-pop-g-4 {
+    font-size: 3rem;
+  }
+}
+/* @media (max-width: 600px) {
+  .font-pop-g-4 {
+    font-size: 2.5rem;
+  }
+  .font-int-g-1 {
+    font-size: 0.75rem;
+  }
+} */
