--- a/css/project.css
+++ b/css/project.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 35px;
-
   position: relative;
 
   & > .project-boxs {
@@ -31,16 +30,18 @@
   margin: 30px 0;
   text-align: center;
 }
-.project-site img {
+#project .project-site img {
   border-radius: 15px 15px 0 0;
-  height: auto;
+  height: 24vh;
+  width: 46vw;
+  object-fit: cover;
+  object-position: center;
 }
 .project-site {
   height: auto;
 }
 .project-mobile {
   position: absolute;
-  top: 0;
   object-fit: cover;
   object-position: center;
 }
@@ -53,6 +54,7 @@
   display: inline-block;
   margin-top: 35px;
 }
+
 .project-inf::before {
   content: "";
   display: block;
@@ -64,6 +66,24 @@
   content: "";
   display: block;
   background: url("../img/projetos/animais-mobile.png") no-repeat;
-  width: 1409px;
+  width: 149px;
   height: 299px;
+  position: absolute;
+}
+@media (max-width: 850px) {
+  .project-box {
+    grid-template-columns: 1fr;
+  }
+  #project .project-site img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 500px) {
+  #project h2::before {
+    height: 22px;
+  }
+  #project h2 {
+    text-align: center;
+  }
 }
