--- a/css/studies.css
+++ b/css/studies.css
@@ -1,8 +1,3 @@
-.studies-container {
-  margin: 0 auto;
-  width: 1000px;
-  padding-bottom: 120px;
-}
 .studies-boxs {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -19,8 +14,8 @@
 
 .my-studies h2::before {
   content: "";
-  display: block;
-  background: url("../img/fotos/foto-perfil-1.jpeg") no-repeat;
+  display: inline-block;
+  background: url("../img/icon/detalhe.svg") no-repeat;
   width: 26px;
   height: 41px;
   margin-right: 10px;
@@ -30,8 +25,25 @@
   justify-content: space-between;
 }
 .studies-boxs img {
-  max-width: 90px;
+  width: 90px;
   height: 90px;
   position: relative;
   top: -50px;
+}
+@media (max-width: 800px) {
+  .studies-boxs {
+    grid-template-columns: 1fr;
+  }
+  .studies-boxs ul {
+    display: flex;
+  }
+}
+
+@media (max-width: 500px) {
+  .my-studies h2::before {
+    height: 22px;
+  }
+  .my-studies h2 {
+    text-align: center;
+  }
 }
