--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -35,10 +35,16 @@
     font-size: 1.25rem;
     padding: 10px 14px;
   }
+  .Subtitulo {
+    font-size: 2.5rem;
+  }
 }
 @media (max-width: 800px) {
   .btn {
     font-size: 1rem;
     padding: 8px 10px;
+  }
+  .Subtitulo {
+    font-size: 2rem;
   }
 }
