--- a/css/contato.css
+++ b/css/contato.css
@@ -13,6 +13,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  margin-top: 80px;
 }
 .field label {
   display: block;
@@ -44,7 +45,7 @@
   width: 300px;
 }
 .form p {
-  margin-bottom: 50px;
+  margin: 30px 0;
 }
 @media (max-width: 500px) {
   #contactme h2::before {
@@ -52,5 +53,37 @@
   }
   #contact h2 {
     text-align: center;
+  }
+}
+@media (max-width: 850px) {
+  .field {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+  }
+  .field label {
+    font-size: 1rem;
+  }
+  .field input[type="text"],
+  .field input[type="email"],
+  .field textarea {
+    font-size: 0.875rem;
+  }
+  .form p {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .botao {
+    width: 150px;
+    margin-bottom: -20px;
+  }
+  .field input[type="text"],
+  .field input[type="email"],
+  .field textarea {
+    padding: 8px;
+  }
+  .field {
+    margin-top: 40px;
   }
 }
