--- a/css/project.css
+++ b/css/project.css
@@ -20,7 +20,7 @@
 #project h2::before {
   content: "";
   display: inline-block;
-  background: url("../img/icon/detalhe.svg") no-repeat;
+  background: url("../img/icons/detalhe.svg") no-repeat;
   width: 26px;
   height: 41px;
   margin-right: 10px;
@@ -77,6 +77,11 @@
   #project .project-site img {
     width: 100%;
     height: 100%;
+  }
+  .project-links ul {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 30px;
   }
 }
 @media (max-width: 500px) {
