--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -1,3 +1,8 @@
+:root {
+  --font-input: 400 1rem/1.5 "Roboto", sans-serif;
+  --font-label: 600 1.5rem/1.5 "Roboto", sans-serif;
+  --font-menu: 600 1.25rem/1 "Inter", sans-serif;
+}
 .font-int-g-1 {
   font: 600 1.15rem/1.3 "Inter", sans-serif;
 }
@@ -15,6 +20,9 @@
 }
 .font-os-r-1 {
   font: 300 1.5rem/1.3 "Oswald", sans-serif;
+}
+.font-from {
+  font: 400 1rem/1.5 "Roboto", sans-serif;
 }
 
 @media (max-width: 1100px) {
@@ -39,17 +47,17 @@
 }
 @media (max-width: 950px) {
   .font-int-g-1 {
-    font-size: 0.85rem;
+    font-size: 1rem;
   }
   .font-pop-g-4 {
     font-size: 3rem;
   }
 }
-/* @media (max-width: 600px) {
+@media (max-width: 500px) {
   .font-pop-g-4 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .font-int-g-1 {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
   }
-} */
+}
