--- a/css/head/header.css
+++ b/css/head/header.css
@@ -1,13 +1,7 @@
 #header {
   padding: 150px 0;
 }
-.header-content img {
-  padding-left: 20px;
-}
 .header-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   position: fixed;
   top: -1px;
   left: 0;
@@ -16,6 +10,13 @@
   margin: 0 auto;
   height: 10vw;
   padding: 20px 0;
+}
+.header-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .navegacao ul {
   display: flex;
@@ -54,15 +55,17 @@
 .introduction-content {
   text-align: center;
   margin-top: 120px;
-  & h1 {
-    color: var(--cor-titulo);
-  }
-
-  & p {
-    margin-top: 65px;
-    color: var(--cor-subtitulo);
-  }
 }
+
+.introduction-content h1 {
+  color: var(--cor-titulo);
+}
+
+.introduction-content p {
+  margin-top: 65px;
+  color: var(--cor-subtitulo);
+}
+
 .links-extremos {
   margin-top: 100px;
 }
@@ -94,6 +97,12 @@
   .links-extremos span {
     padding: 0 10px;
   }
+  .header-menu {
+    height: 40px;
+  }
+  .header-content {
+    padding: 40px 0;
+  }
 }
 @media (max-width: 600px) {
   #header .header-content li {
@@ -109,12 +118,8 @@
   #header {
     padding: 30px 0 30px 0;
   }
-  .header-img img {
-    width: 65%;
-    height: 65%;
-  }
+
   .links-extremos span {
     padding: 0 5px;
   }
 }
-/* animação key */
