--- a/css/contato.css
+++ b/css/contato.css
@@ -52,7 +52,8 @@
   margin: 30px 0;
 }
 @media (max-width: 500px) {
-  #contactme h2::before {
+  #contact h2::before {
+    width: 25px;
     height: 22px;
   }
   #contact h2 {
