--- a/css/global.css
+++ b/css/global.css
@@ -9,11 +9,11 @@ body {
   padding: 0 20px;
 }
 .section {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 .container {
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 90px 20px 120px 20px;
 }
@@ -26,14 +26,7 @@ img[src$=".png"] {
   display: block;
   height: 100%;
 }
-@media (max-width: 1050px) {
-  .section {
-    width: auto;
-  }
-  .container {
-    width: auto;
-  }
-}
+
 @media (max-width: 450px) {
   body {
     padding: 0 10px;
