--- a/css/head/menu.css
+++ b/css/head/menu.css
@@ -4,6 +4,7 @@
 @media (max-width: 850px) {
   [data-button="menu"] {
     display: flex;
+    margin-bottom: 5px;
     padding: 8px 12px;
     border: 2px solid var(--cor-8);
     background-color: var(--cor-detaque-1);
@@ -15,7 +16,7 @@
     cursor: pointer;
     position: relative;
     right: 15px;
-    top: -35px;
+    animation: showRigth 0.3s forwards;
   }
   [data-button="menu"]::before {
     content: "";
@@ -38,8 +39,7 @@
     border-radius: 4px;
     z-index: 200;
     position: absolute;
-    top: 65px;
-    right: 15px;
+    right: 35px;
   }
 
   #menu {
@@ -52,33 +52,10 @@
   [data-button="menu"].active::before {
     transform: rotate(90deg);
   }
-  .navegacao {
-    padding: 60px 0 0 0;
-  }
 }
-@keyframes showRigth {
-  from {
-    opacity: 0;
-    transform: translate3d(30px, 0, 0);
-  }
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
+
 @media (max-width: 600px) {
   [data-button="lista"] {
-    height: 200px;
-  }
-}
-@media (max-width: 450px) {
-  [data-button="menu"] {
-    margin-top: 50px;
-  }
-  .navegacao {
-    padding: 30px 0 0 0;
-  }
-  [data-button="lista"] {
-    top: 57px;
+    height: auto;
   }
 }
