--- a/css/head/scrolling.css
+++ b/css/head/scrolling.css
@@ -1,8 +1,30 @@
 [data-scrolling].scrolling {
   background: linear-gradient(var(--cor-8), 90%, var(--cor-9));
-  height: 3vw;
+  position: fixed;
+  top: -1px;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  padding: 20px 0;
+  animation: showDown 0.5s forwards;
 }
 
+@media (max-width: 500px) {
+  [data-scrolling].scrolling {
+    height: 3vh;
+  }
+}
 [data-scrolling] {
-  transition: 0.3s;
+  transition: 0.5s;
+}
+
+@keyframes showDown {
+  form {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
