--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,4 +1,4 @@
-.Subtitulo {
+.subtitulo {
   font: 700 3.12rem/1.5 "Inter", sans-serif;
   color: var(--cor-detaque-1);
   text-transform: uppercase;
@@ -34,7 +34,7 @@
     font-size: 1.25rem;
     padding: 10px 14px;
   }
-  .Subtitulo {
+  .subtitulo {
     font-size: 2.5rem;
   }
 }
@@ -43,7 +43,28 @@
     font-size: 1rem;
     padding: 8px 10px;
   }
-  .Subtitulo {
+  .subtitulo {
     font-size: 2rem;
+  }
+}
+
+@keyframes showRigth {
+  from {
+    opacity: 0;
+    transform: translate3d(30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes showLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
