--- a/css/about-me.css
+++ b/css/about-me.css
@@ -40,7 +40,9 @@
     justify-content: flex-start;
   }
   .about__me-box::before {
-    display: none;
+    background: url("../img/icons/detalhe-foto-min.jpg") no-repeat center center;
+    bottom: -100px;
+    right: -50px;
   }
 }
 @media (max-width: 850px) {
@@ -50,10 +52,16 @@
   .img-foto {
     justify-content: center;
   }
+  .about__me-box::before {
+    display: none;
+  }
   .img-foto img {
     border-radius: 50%;
     border: 3px solid var(--cor-detaque-1);
-    box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  .about__me-box p {
+    margin-right: 0;
   }
 }
 @media (max-width: 500px) {
