--- a/css/head/scrolling.css
+++ b/css/head/scrolling.css
@@ -7,15 +7,14 @@
   z-index: 2;
   padding: 20px 0;
   animation: showDown 0.5s forwards;
+  height: 4vh;
+  transition: 0.5s;
 }
 
 @media (max-width: 500px) {
   [data-scrolling].scrolling {
     height: 3vh;
   }
-}
-[data-scrolling] {
-  transition: 0.5s;
 }
 
 @keyframes showDown {
