--- a/css/project.css
+++ b/css/project.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   background: var(--cor-8);
   border-radius: 15px;
-  box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 4px 10px rgba(0, 0, 0, 0.2);
   width: 100%;
   flex: 1 0 0;
 }
