--- a/css/studies.css
+++ b/css/studies.css
@@ -9,7 +9,7 @@
   padding: 0px 35px 40px 35px;
   border-radius: 15px;
   margin-bottom: 70px;
-  box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 .studies-box p {
   color: var(--cor-texto);
